# bio

./: .gitignore  README.md  pyproject.toml
docs/: customization.md  reversing.md  usage.md
src/unfuncaptcha_bio/: __init__.py  event.py  kbio.py  points.py
src/unfuncaptcha_bio/bio/: kbio.py  mbio.py  tbio.py
