[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unfuncaptcha_bio"
version = "1.0.0"
authors = [{ name = "bc", email = "no@dont.email.me" }]
description = " Generate mouse, touch, and keyboard motions for Arkose Labs Funcaptcha"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/unfuncaptcha/bio"
Issues = "https://github.com/unfuncaptcha/bio/issues"